fixed missing translation in single page template

--- a/themes/unimi-calendar/layouts/_default/single.html
+++ b/themes/unimi-calendar/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <hgroup class="center">
-    <h1>Guida per {{ .Title }}</h1>
+    <h1>{{ i18n "guide_for" }}{{ .Title }}</h1>
     <h3>{{ .Params.Description }}</h3>
 </hgroup>
 
