added repo url in index.html

--- a/themes/unimi-calendar/layouts/index.html
+++ b/themes/unimi-calendar/layouts/index.html
@@ -39,6 +39,6 @@
 <!-- Contacts -->
 <section>
     <h3>😎 {{ i18n "bug_title" }}</h3>
-    <p>{{ i18n "bug_description" }}</p>
+    <p>{{ i18n "bug_description" | safeHTML }}</p>
 </section>
 {{ end }}
