--- a/themes/unimi-calendar/layouts/index.html
+++ b/themes/unimi-calendar/layouts/index.html
@@ -40,5 +40,6 @@
 <section>
     <h3>😎 {{ i18n "bug_title" }}</h3>
     <p>{{ i18n "bug_description" | safeHTML }}</p>
+    <p>⚠️ <strong>{{ i18n "disclaimer" }}</strong></p>
 </section>
 {{ end }}
