renamed modal to wat

--- a/themes/unimi-calendar/layouts/_default/baseof.html
+++ b/themes/unimi-calendar/layouts/_default/baseof.html
@@ -5,8 +5,8 @@
         {{- partial "header.html" . -}}
         <main class="container">
         {{- block "main" . }}{{- end }}
-        <!-- Cool, but why? -->
-        {{ partial "modals/why.html" }}
+        <!-- wat? -->
+        {{ partial "modals/wat.html" }}
         </main>
         {{- partial "footer.html" . -}}
         
