fixed css integrity issue

--- a/themes/unimi-calendar/layouts/partials/head.html
+++ b/themes/unimi-calendar/layouts/partials/head.html
@@ -11,7 +11,7 @@
         {{ end }}
     </title>
     <!-- PicoCSS -->
-    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css" integrity="sha384-0NojrWFg3Ff8q17gIYvkyw+Xtv5f1C91Wce+s0shYxMVcqbDwVr5svss10OLTGhu" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.5.3/css/pico.min.css" integrity="sha384-x2grTbN+s4BXSUxnfuMLqiLAb4wtvew6Yq9ozcRiWYStIrbOU+DjcuGm2g6hpz4B" crossorigin="anonymous" />
     <!-- Customization -->
     <link rel="stylesheet" href="{{ (resources.Get "css/style.css" | minify).RelPermalink }}" />
 </head>
